Prevent "UP | HOME" links from being hidden by TOC
Aligning the links for page up and home to the right side of the page prevents them from being hidden by the table of contents.

--- a/src/readtheorg_theme/css/readtheorg.css
+++ b/src/readtheorg_theme/css/readtheorg.css
@@ -1135,3 +1135,8 @@ h2.footnotes{
     padding: 9px 12px;
     margin-bottom: 24px;
     font-family:"Roboto Slab","ff-tisa-web-pro","Georgia",Arial,sans-serif}
+
+#org-div-home-and-up { 
+    text-align: right;
+    padding-right: 10pt;
+}
